Fix OAuth session loop via Netlify API proxy
Problem:
- Cross-site cookies blocked between netlify.app and render.com
- Session cookie never persisted after OAuth approval
- Users redirected back to login in a loop

Solution:
- Add netlify.toml to proxy /api/* requests through Netlify
- Update API calls to use relative paths
- Cookies now set as first-party same-origin

Files changed:
- netlify.toml new: API proxy configuration
- index.html: Updated 3 API endpoints to relative paths
- login.html: Updated OAuth start to relative path

--- a/login.html
+++ b/login.html
@@ -103,8 +103,7 @@
   // WHOP LOGIN BUTTON
   // ============================
   whopLoginBtn.addEventListener("click", () => {
-    window.location.href =
-      "https://fmw-list-stacker-backend.onrender.com/api/oauth/start";
+    window.location.href = "/api/oauth/start";
   });
 
 })();
