--- a/index.html
+++ b/index.html
@@ -57,13 +57,10 @@
   // --------------------------------
   if (sessionSuccess) {
     try {
-      await fetch(
-        "https://fmw-list-stacker-backend.onrender.com/api/auth/session",
-        {
-          method: "POST",
-          credentials: "include"
-        }
-      );
+      await fetch("/api/auth/session", {
+        method: "POST",
+        credentials: "include"
+      });
 
       // Clean URL + reload into authenticated state
       window.location.replace("/index.html");
@@ -78,10 +75,9 @@
   // --------------------------------
   async function checkAuth() {
     try {
-      const res = await fetch(
-        "https://fmw-list-stacker-backend.onrender.com/api/auth/check",
-        { credentials: "include" }
-      );
+      const res = await fetch("/api/auth/check", {
+        credentials: "include"
+      });
       const data = await res.json();
       return data.authenticated === true;
     } catch {
@@ -113,8 +109,7 @@
   // 🔑 START LOGIN
   // --------------------------------
   unlockBtn.addEventListener("click", () => {
-    window.location.href =
-      "https://fmw-list-stacker-backend.onrender.com/api/oauth/start";
+    window.location.href = "/api/oauth/start";
   });
 })();
 </script>
